[gd_scene load_steps=2 format=3 uid="uid://bpvsqbbk7bow7"]

[ext_resource type="Script" path="res://Codes/Menus/pause_menu.gd" id="1_u1h8w"]

[node name="Pause_menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_u1h8w")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -91.0
offset_top = -68.0
offset_right = 91.0
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Continuer" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Continuer"

[node name="Option" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Option"

[node name="Menu_Principal" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Retour menu principal"

[node name="Quitter" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quitter"

[node name="SaugarderQuitter" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Sauvegarder & Quitter"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Continuer" to="." method="_on_continuer_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Option" to="." method="_on_option_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Menu_Principal" to="." method="_on_menu_principal_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quitter" to="." method="_on_quitter_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/SaugarderQuitter" to="." method="_on_saugarder_quitter_pressed"]
